--- a/ChessApp/ChessApp.csproj
+++ b/ChessApp/ChessApp.csproj
@@ -70,7 +70,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Chessboard\Field.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Pieces\ActionsStrategy - Copy\BishopActionsStrategy.cs" />
     <Compile Include="Models\Pieces\ActionsStrategy - Copy\CheckActions.cs" />
@@ -81,19 +80,22 @@
     <Compile Include="Models\Pieces\ActionsStrategy - Copy\Position.cs" />
     <Compile Include="Models\Pieces\ActionsStrategy - Copy\Queen.cs" />
     <Compile Include="Models\Pieces\ActionsStrategy - Copy\Rook.cs" />
+    <Compile Include="Models\Pieces\CheckMovesStrategy\ICheckStrategyFactory.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\PawnCheckStrategy.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\QueenCheckStrategy.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\RookCheckStrategy.cs" />
-    <Compile Include="Models\Pieces\CheckMovesStrategy\SetCheckStrategy.cs" />
+    <Compile Include="Models\Pieces\CheckMovesStrategy\CheckStrategyFactory.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\ICheckStrategy.cs" />
     <Compile Include="Models\Pieces\ColoursOfPiece.cs" />
+    <Compile Include="Models\Pieces\IPieceFactory.cs" />
     <Compile Include="Models\Pieces\KindsOfPiece.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\Position.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\BishopCheckStrategy.cs" />
-    <Compile Include="Models\Pieces\CheckMovesStrategy\CheckActions.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\KingCheckStrategy.cs" />
     <Compile Include="Models\Pieces\CheckMovesStrategy\KnightCheckStrategy.cs" />
     <Compile Include="Models\Pieces\IPiece.cs" />
+    <Compile Include="Models\Pieces\Piece.cs" />
+    <Compile Include="Models\Pieces\PieceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
